--- a/starter-code/style.css
+++ b/starter-code/style.css
@@ -1,3 +1,83 @@
-/* This is a multi-line
-comment. Add your CSS code
-from Unit 1 - 5 below  */
+.board{
+height: 50%;
+width 50%;
+display:inline-block;
+float:left;
+margin: 8%;
+}
+
+.card{
+height: 200px;
+width: 150px;
+border: 1px solid;
+background-color:#FFFF00;
+border-radius: 10px;
+
+}
+
+h1{
+color: rgb(2, 132, 130);
+}
+
+h2, h4{
+color: #ffd700;
+}
+
+body{
+	text-align:center;
+}
+
+.name{
+	color:#ff0000;
+	
+}
+nav{
+	
+background-color:#808080;
+	
+}
+a{
+text-decoration:none;
+background-color:#ffbf00;
+color:white;
+padding:35px;
+float:left;
+display:block;
+
+}
+
+a:hover{
+	background-color:red;
+}
+
+.clearfix:after{
+	 visibility: hidden;
+        display: block;
+        content: " ";
+        clear: both;
+        height: 0;
+        font-size: 0
+}
+
+footer{
+background-color:#808080;
+}
+aside{
+width:860px;
+
+float: right;
+padding-bottom: 100px;
+}
+
+.card1{
+	float:left;
+	margin-left:300px;
+	
+}
+
+.card3{
+	float:left;
+	margin-left:300px;
+	margin-top:100px;
+}
+
